--- a/app/views/important_unit_assignments/_form.html.erb
+++ b/app/views/important_unit_assignments/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-    <%= f.hidden_field :military_history_id, value: @military_history.id %>
+    <%= f.hidden_field :military_history_id, value: @personal_detail.military_history.id %>
 
   <div class="field">
     <%= f.label :unit %><br />
