--- a/app/views/personal_details/index.html.erb
+++ b/app/views/personal_details/index.html.erb
@@ -1,4 +1,9 @@
+<div class="container">
 <h1>Personal Details</h1>
+<%= search_form_for @q do |f| %>
+    <%= f.text_field :last_name_cont, placeholder: "Search by Last Name", class: "input search-query" %>
+    <%= f.submit "Search", class: "btn btn-search" %>
+<% end %>
 <%= link_to 'Create New Personal detail', new_personal_detail_path, class: "btn btn-primary" %>
 <table class="table">
   <tr>
@@ -10,7 +15,7 @@
     <th></th>
   </tr>
 
-<% @personal_details.each do |personal_detail| %>
+<% @personal_detail.each do |personal_detail| %>
   <tr>
     <td><%= link_to personal_detail.last_name, personal_detail %></td>
     <td><%= personal_detail.first_name %></td>
@@ -19,3 +24,4 @@
   </tr>
 <% end %>
 </table>
+</div>
