--- a/app/views/personal_details/show.html.erb
+++ b/app/views/personal_details/show.html.erb
@@ -1,6 +1,20 @@
+<div class="navbar navbar-static-top navbar-inverse">
+  <div class="navbar-inner">
+    <%= link_to "7th Marine Brigade", root_path, class: "brand" %>
+  <ul class="nav">
+    <li class="active"><a href="#">PHS</a></li>
+    <% if @personal_detail.aadt.nil? %>
+        <li><%= link_to "AADT with SOI", new_aadt_path(JAT2JUB4HJSDFSBFDJ33BK: @personal_detail.id, rank: @personal_detail.rank, name: "#{@personal_detail.first_name} #{@personal_detail.middle_name} #{@personal_detail.last_name}", afpsn: @personal_detail.AFPSN) %></li>
+    <% else %>
+        <li><%= link_to "AADT with SOI", @personal_detail.aadt %></li>
+    <% end %>
+  </ul>
+</div>
+</div>
+<div class="container">
 <p id="notice"><%= notice %></p>
 
-<%= @personal_detail.rank %> <%= @personal_detail.first_name %>
+<legend>Personal History Statement of <%= @personal_detail.rank %> <%= @personal_detail.first_name %></legend>
 
 <div class="row">
   <div class="span3">
@@ -655,4 +669,5 @@
     </div>
     </div>
   </div>
+</div>
 </div>
