--- a/app/views/static_pages/homepage.html.erb
+++ b/app/views/static_pages/homepage.html.erb
@@ -1,11 +1,13 @@
-<div class="row">
-  <div class="span3">
-    <%= image_tag("Logo PMC best.jpg") %>
-  </div>
-  <div class="span6" align="center">
-    <h1>7th Marines Human Capital Management System</h1>
-  </div>
-  <div class="span3">
-    <%= image_tag("Logo 7MBDE.jpg", size: "185x185") %>
-  </div>
+<div class="container">
+    <div class="row">
+      <div class="span3">
+        <%= image_tag("Logo PMC best.jpg") %>
+      </div>
+      <div class="span6" align="center">
+        <h1>7th Marines Human Capital Management System</h1>
+      </div>
+      <div class="span3">
+        <%= image_tag("Logo 7MBDE.jpg", size: "185x185") %>
+      </div>
+    </div>
 </div>
