--- a/app/views/personal_details/edit.html.erb
+++ b/app/views/personal_details/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing personal_detail</h1>
+<div class="container">
+    <h1>Editing personal_detail</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', @personal_detail %> |
-<%= link_to 'Back', personal_details_path %>
+    <%= link_to 'Show', @personal_detail %> |
+    <%= link_to 'Back', personal_details_path %>
+</div>
