--- a/app/views/static_pages/homepage.html.erb
+++ b/app/views/static_pages/homepage.html.erb
@@ -10,4 +10,37 @@
         <%= image_tag("Logo 7MBDE.jpg", size: "185x185") %>
       </div>
     </div>
+  <div class="hero-unit" align="center">
+    <h3>REQUIREMENTS FOR AADT/ADT</h3>
+    <i><small>As required by the Naval Reserve Command</small></i><br><br>
+    <p>AADT with SOI Form</p>
+    <p>Reservist Information Data Sheet (RIDS)</p>
+    <p>Sketch of Residence</p>
+    <p>Commission/Enlistment Order</p>
+    <p>Unit Assignment Order</p>
+    <p>Previous AADT/ADT Order</p>
+    <p>After AADT/ADT Accomplishment Report</p><br>
+  </div>
+  <div align="center">
+    <%= link_to "Proceed to Personnel Management", personal_details_path %>
+  </div>
+  <div class="row">
+    <div class="span6">
+      <legend><small>7th Marines Human Capital Management System</small></legend>
+      <ul>
+        <li>Personnel Management</li>
+        <li>Active Duty Training History and Management</li>
+        <li>Mission and Assignment History</li>
+        <li>Attendance module</li>
+        <li>Muster and Deployment Module</li>
+      </ul>
+    </div>
+    <div class="span6">
+      <legend><small>Access</small></legend>
+      All Battalion AADT/ADT applications should be collected
+      and reviewed to contain the above documents and then
+      be endorsed by the Battalion Commander to the Brigade
+      Commander.<br>
+    </div>
+  </div>
 </div>
