--- a/app/views/personal_details/new.html.erb
+++ b/app/views/personal_details/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Personal Details</h1>
+<div class="container">
+    <h1>Personal Details</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', personal_details_path %>
+    <%= link_to 'Back', personal_details_path %>
+</div>
